--- a/schedule-game/src/app/core/components/schedule-grid/schedule-grid.scss
+++ b/schedule-game/src/app/core/components/schedule-grid/schedule-grid.scss
@@ -22,7 +22,6 @@
 
 .header {
   @include flex($justify: space-between, $align: center);
-  // margin-bottom: 16px;
   padding: 5px;
   flex-shrink: 0;
 
@@ -52,6 +51,9 @@
   display: flex;
   flex-direction: column;
   @include custom-scrollbar($width: 6px);
+  @include mobile {
+    max-height: 50vh;
+  }
 }
 
 .schedule-table {
